correcciones a la logica de creacion de cuentas con un cotitular y sin cotitular