@@ -1,10 +1,10 @@
 package com.bbva.minibank.infrastructure.mappers;
 
 import com.bbva.minibank.domain.models.Account;
-import com.bbva.minibank.domain.models.Transaction;
 import com.bbva.minibank.infrastructure.entities.AccountEntity;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 import com.bbva.minibank.infrastructure.entities.ClientEntity;
 import com.bbva.minibank.infrastructure.entities.TransactionEntity;
@@ -23,14 +23,23 @@ public class AccountEntityMapper {
       }
 
       // Construye una instancia de Account utilizando el patrón Builder
-      return Account.builder()
-              .accountNumber(accountEntity.getAccountNumber())
-              .balance(accountEntity.getBalance())
-              .currency(accountEntity.getCurrency())
-              .clientHolder(accountEntity.getOwner().getId())
-              .clientSecondHolder(accountEntity.getCoHolders().isEmpty()? null : accountEntity.getCoHolders().get(0).getId())
-              .transactions(Optional.ofNullable(accountEntity.getTransactions()).orElse(Collections.emptyList()).stream().map(transactionMapper::toDomain).toList())
-              .build();
+    return Account.builder()
+                  .accountNumber(accountEntity.getAccountNumber())
+                  .balance(accountEntity.getBalance())
+                  .currency(accountEntity.getCurrency())
+                  .creationDate(accountEntity.getCreationDate())
+                  .clientHolder(accountEntity.getOwner()
+                                             .getId())
+                  .listSecondsHolders(accountEntity.getCoHolders().stream()
+                                                   .map(ClientEntity::getId)
+                                                   .collect(Collectors.toList()))
+
+                  .transactions(Optional.ofNullable(accountEntity.getTransactions())
+                                        .orElse(Collections.emptyList())
+                                        .stream()
+                                        .map(transactionMapper::toDomain)
+                                        .toList())
+                  .build();
 
   }
 
@@ -42,21 +51,27 @@ public class AccountEntityMapper {
     AccountEntity.AccountEntityBuilder accountBuilder = AccountEntity.builder()
             .accountNumber(account.getAccountNumber())
             .balance(account.getBalance())
-            .currency(account.getCurrency());
+            .currency(account.getCurrency())
+            .creationDate(account.getCreationDate());
 
-    List<ClientEntity> coHolders = new ArrayList<>();
-
+    // Asignar el titular (holder)
     ClientEntity holderEntity = new ClientEntity();
     holderEntity.setId(account.getClientHolder());
     accountBuilder.owner(holderEntity);
 
-    if (account.getClientSecondHolder() != null) {
-      ClientEntity secondHolderEntity = new ClientEntity();
-      secondHolderEntity.setId(account.getClientSecondHolder());
-      coHolders.add(secondHolderEntity);
+    // Asignar el segundo titular (secondHolder)
+    if (account.getListSecondsHolders() != null) {
+      List<ClientEntity> coHolders = account.getListSecondsHolders().stream()
+                                            .map(clientId -> {
+                                              ClientEntity coHolderEntity = new ClientEntity();
+                                              coHolderEntity.setId(clientId);
+                                              return coHolderEntity;
+                                            })
+                                            .collect(Collectors.toList());
+      accountBuilder.coHolders(coHolders);
     }
 
-    accountBuilder.coHolders(coHolders);
+    // Asignar las transacciones
     List<TransactionEntity> transactionEntities = Optional.ofNullable(account.getTransactions())
             .orElse(Collections.emptyList())
             .stream()
